fix promoted badge z-index

--- a/src/app/core/components/list-view-only/list-item/list-item.component.scss
+++ b/src/app/core/components/list-view-only/list-item/list-item.component.scss
@@ -17,7 +17,7 @@
     position: absolute;
     top: -3px; //12 - 15;
     left: -15px;
-    z-index: 10;
+    z-index: 3;
   }
 
   .title {
