--- a/src/app/modules/services/services-detail/services-detail.component.scss
+++ b/src/app/modules/services/services-detail/services-detail.component.scss
@@ -53,7 +53,7 @@
   position: absolute;
   bottom: 16px;
   right: 16px;
-  z-index: 10;
+  z-index: 3;
 }
 
 
